# grc-risk-dashboard

./: README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: ai_helper.py
src/grc_risk_dashboard/: config.py  db.py  helpers.py  main.py  models.py  utils.py
src/grc_risk_dashboard/api/: routes.py
src/grc_risk_dashboard/services/: __init__.py  risk_service.py
tests/: test_basic.py
