[tool.poetry]
name = "grc-risk-dashboard"
version = "0.1.0"
description = "A dashboard for managing GRC risks."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0"
pandas = "^1.3"
numpy = "^1.21"
seaborn = "^0.11"
matplotlib = "^3.4"
openpyxl = "^3.0"
plotly = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"